--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=123
 
 # Hibernate properties
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQL94Dialect
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 #paypal
 paypal.mode=sandbox
